{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 54,
  "lineage": "e0b1abc9-e1f5-5ad4-f4a8-dc5155ade7f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bb393bbd2be5be7",
            "arn": "arn:aws:ec2:ap-south-1:211125665932:elastic-ip/eipalloc-01bb393bbd2be5be7",
            "association_id": "eipassoc-0857cbc59caf63cec",
            "domain": "vpc",
            "id": "eipalloc-01bb393bbd2be5be7",
            "instance": "i-0590e6e1ae6584b1b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01745b7cf98f96239",
            "private_dns": "ip-172-31-8-128.ap-south-1.compute.internal",
            "private_ip": "172.31.8.128",
            "public_dns": "ec2-13-202-146-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.146.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.frontend",
            "aws_key_pair.ssh_keypair",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078264b8ba71bc45e",
            "arn": "arn:aws:ec2:ap-south-1:211125665932:instance/i-0590e6e1ae6584b1b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0590e6e1ae6584b1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zomato-production",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01745b7cf98f96239",
            "private_dns": "ip-172-31-8-128.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.128",
            "public_dns": "ec2-13-202-146-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.146.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b51279a023b391ec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "zomato-production-frontend"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0faf9c3306f7994b5",
            "tags": {
              "Name": "zomato-production-frontend"
            },
            "tags_all": {
              "Name": "zomato-production-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1b8d61e45c06b0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_keypair",
            "aws_security_group.frontend"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125665932:security-group/sg-0c1b8d61e45c06b0f",
            "description": "zomato-production-frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1b8d61e45c06b0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zomato-production-frontend",
            "name_prefix": "",
            "owner_id": "211125665932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zomato-production-frontend"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "zomato-production-frontend",
              "Owner": "Akhin",
              "Project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5464d851177b143"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-626131537",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1b8d61e45c06b0f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3237255014",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1b8d61e45c06b0f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2586821922",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c1b8d61e45c06b0f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend"
          ]
        }
      ]
    }
  ]
}